2009-09-03 Chris Allegretta <chrisa@asty.org>
	* global.c (shortcut_init): Fix up/down keys not responding in the file browser,
	  discovered by Hannes <mr_creosote@mutantwatch.de>.
	* move.c (do_up) - Fix another scrolling issue with softwrap when the
	  cursor is beyond COLS, discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-09-02 Chris Allegretta <chrisa@asty.org>
	* Attempt to check file writability and emit a warning on the status bar
	  if nano doesn't think the file can be written to.  Feature originally
	  requested by Damien Jolders <madamien@skullsquad.com> et al.

2009-08-29 Chris Allegretta <chrisa@asty.org>
	* Fix more soft wrapping issues, particularly with scrolling,
	  discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-08-19 Chris Allegretta <chrisa@asty.org>
	* Fix issue with soft wrapping not displaying the last character of each line,
	  fixed bug discovered by Hannes <mr_creosote@mutantwatch.de>.

2009-08-17 Mike Frysinger <vapier@gentoo.org>
	* doc/syntax/(gentoo|sh|tcl).nanorc: Fix problems with empty regexes on POSIX.
	  Fixes Savannah bug 27175.

2009-08-17 Chris Allegretta <chrisa@asty.org>
	* Initial soft line wrapping implementation.  Command line flags
	  -$ or --softwrap.  
	* nano.c, text.c: Clean up some fprintf warnings in debug mode due to printing
	  a size_t without using the zd specifier.
2009-08-13 Chris Allegretta <chrisa@asty.org>
	* New global flag implementation courtesy of Adam Wysocki <gophi@arcabit.pl>, allows
 	  previous undo flag to be implemented consistent with other flags.

GNU nano 2.1.10 - 2009.07.28

2009-07-27 Chris Allegretta <chrisa@asty.org>
	* text.c (undo_cut, redo_cut): Don't actually try and undo/redo an empty cut, i.e. the magicline. 
	  Fixes crash on cutting last line discovered by Eitan Adler <eitanadlerlist@gmail.com>.

2009-07-11 Chris Allegretta <chrisa@asty.org>
	* nano-regress: Small tweaks